Make backfill refresh limit var

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -36,6 +36,7 @@ jobs:
           PLEX_TOKEN: ${{ secrets.PLEX_TOKEN }}
           PLEX_SERVER_NAME: ${{ secrets.PLEX_SERVER_NAME }}
           DISCOVER_LIMIT: ${{ vars.DISCOVER_LIMIT }}
+          REFRESH_LIMIT: ${{ vars.REFRESH_LIMIT }}
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
