--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -11,7 +11,7 @@ concurrency:
 
 jobs:
   update:
-    runs-on: ubuntu-24.04
+    runs-on: ubuntu-slim
 
     steps:
       - uses: actions/checkout@v5
@@ -43,7 +43,7 @@ jobs:
           retention-days: 7
 
   deploy:
-    runs-on: ubuntu-24.04
+    runs-on: ubuntu-slim
     needs: update
 
     permissions:
