Use ubuntu-slim for deploy

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -43,7 +43,7 @@ jobs:
           retention-days: 7
 
   deploy:
-    runs-on: ubuntu-24.04
+    runs-on: ubuntu-slim
     needs: update
 
     permissions:
